argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd

spec:
  rules:
    - host: argocd.mogyuchi.jp
      http:
        paths:
          - path: "/"
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
            pathType: Prefix
